# maxwell-service-python

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: logging.json  server.toml  service.template.toml  service.toml
examples/: hello.py
maxwell/: __init__.py  app.py  config.py  server.py  worker.py
maxwell/server/: app.py  config.py  connection.py  hooks.py  master_client.py  publisher.py  reporter.py  server.py  service.py  worker.py
maxwell/service/: config.py  connection.py  hooks.py  master_client.py  publisher.py  registrar.py  server.py  service.py  topic_locatlizer.py  worker.py
test/: test_config.py  test_connection.py
