[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Xu Chaoqian", email = "chaoranxu@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi[all] >= 0.101.1",
  "gunicorn[setproctitle] >= 21.2.0",
  "tomli == 2.0.1",
  "async-lru == 2.0.4",
  "maxwell-protocol == 0.6.5",
]
description = "The maxwell service implementation for python."
license = {file = "LICENSE"}
name = "maxwell-service"
readme = "README.md"
requires-python = ">=3.7"
version = "0.6.12"

[tool.pytest.ini_options]
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "[%(levelname)8s] %(asctime)s (%(filename)s:%(lineno)s) %(message)s"
log_cli_level = "DEBUG"

[project.optional-dependencies]
test = ["pytest >= 7.2.0", "pytest-asyncio >= 0.20.3", "pytest-cov[all]"]

[project.urls]
changelog = "https://github.com/maxwell-dev/maxwell-service-python/CHANGELOG.md"
repository = "https://github.com/maxwell-dev/maxwell-service-python"

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.packages.find]
where = [
  "maxwell",
] # list of folders that contain the packages (["."] by default)
