[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Xu Chaoqian", email = "chaoranxu@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi[all] >= 0.110.0",
  "tomli >= 2.0.1",
  "async-lru >= 2.0.4",
  "setproctitle >= 1.3.3",
  "maxwell-protocol == 0.7.3",
  "maxwell-utils == 0.6.4",
]
description = "The maxwell service implementation for python."
license = {file = "LICENSE"}
name = "maxwell-service"
readme = "README.md"
requires-python = ">=3.7"
version = "0.10.0"

[project.optional-dependencies]
test = ["pytest >= 8.1.1", "pytest-asyncio >= 0.23.6", "pytest-cov >= 4.1.0"]

[project.urls]
changelog = "https://github.com/maxwell-dev/maxwell-service-python/CHANGELOG.md"
repository = "https://github.com/maxwell-dev/maxwell-service-python"

[tool.pytest.ini_options]
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "[%(levelname)8s] %(asctime)s (%(filename)s:%(lineno)s) %(message)s"
log_cli_level = "DEBUG"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["maxwell"]

[tool.setuptools.packages.find]
where = [
  "maxwell",
] # list of folders that contain the packages (["."] by default)
